# citypop-fadeout-analyzer

./: .gitignore  README.md  pyproject.toml
src/citypop_fadeout_analyzer/: __init__.py  analyzer.py  cli.py  metadata.py  visualize.py
tests/: test_analyzer.py  test_metadata.py
