[project]
name = "citypop-fadeout-analyzer"
version = "0.1.0"
description = "Classify ending styles of Japanese city pop tracks (fade-out / cold ending / riff-repetition cold ending)"
readme = "README.md"
authors = [
    { name = "okamyuji" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "soundfile>=0.12",
    "numba>=0.59",
    "mutagen>=1.47",
]

[project.scripts]
citypop-analyze = "citypop_fadeout_analyzer.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
    "C4",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
